src/scss/botchat.scss
/* ... */
/* messages */

    .wc-message-wrapper {
        animation: animationFrames 2s;
        animation-iteration-count: 1;
        clear: both;
        margin-bottom: 5px;
        overflow: hidden;
        position: relative;
        /*transition: max-height 2s ease-in-out;*/
    }

    .wc-message-wrapper.bot {
      display:flex;
      flex-direction: row;
    }

    .wc-message-bot-name {
      color: $c05;
      float: left;
      margin-left: 33px;
      margin-bottom: 4px;
      font-weight: normal;
      font-style: normal;
      font-stretch: normal;
      line-height: normal;
      letter-spacing: 0.03em;
      font-size: 12px;
    }

    .wc-message-avatar{
        width: 25px;
        height: 25px;
        min-width: 25px;
        border-radius: 22px;
        display: flex;
        align-items: center;
        justify-content: center;
        color: #f6f7f8;
        margin: auto 0 10px 0;
        background: #3F6DE1 !important;
    }

    .wc-message-avatar.blank{
      color: transparent; 
      opacity: 0;
        // color: #f6f7f8; 
        // background: #3F6DE1;
    }

    @keyframes animationFrames{
        0% {
            /*max-height: 0;*/
            opacity: 0;
        }
        20% {
            opacity: 1;
        }
        100% {
            /*max-height: 2000px;*/
        }
    }

    .wc-message {
        position: relative;
        min-height: 49px;
        margin-bottom: 3px;
    }

    .wc-message-wrapper.carousel .wc-message {
        max-width: none;
        padding-right: 8px;
    }

    .wc-message svg.wc-message-callout {
        height: 22px;
        position: absolute;
        stroke: none;
        top: 12px;
        width: 6px;
    }

    .wc-message-content {
        border-radius: 2px;
        // box-shadow: 0px 1px 1px 0px $c_shadow;
        padding: 14px;
        word-break: break-word;
        border-radius: $messageBorderRadius;
        font-size: $message_font_size;
        // background-color: #3F6DE1;

        .wc-message-date &, .wc-message-handoff & {
            padding:0 !important;
        }

        .prefix__radio {
            display: block;
            position: relative;
            margin-top: 5px;
        }

        .prefix__radio label {
            color: black;
            margin-right: 10px;
        }

        .prefix__radio input {
            opacity: 0;
            position: absolute;
        }
        
        .prefix_label:hover input ~ .checkmark {
            background-color: #ccc;
        }

        .checkmark::after {
            content: "";
            position: absolute;
            display: none;
        }

        .prefix_label input:checked ~ .checkmark::after {
            display: block;
        }

        .prefix_label .checkmark::after {
            border-radius: 50%;
            background: #3F6DE1;
            height: 9px;
            width: 9px;
            top: 2.5px;
            left: 2px;
        }

        .prefix_text {
            margin-left: 20px;
        }

        .checkmark {
            position: absolute;
            height: 15px;
            width: 15px;
            background-color: #F7F7F7;
            border: 1px solid #EBEBEB;
            border-radius: 50%;
            margin-left: 3px;
        }

        .contact_label {
            margin-bottom: 20px;
        }

        .contact__form__card {
          $contact_padding_v: 8px;
          $contact_width: 300px;
          width: $contact_width;
          background-color: white;
          color: black;
          padding: 8px 20px 20px 20px;

          &__container {
            display: flex;
            flex-direction: column;
            padding-bottom: $contact_padding_v + 10px;

            &__input {
              width: 100%;
              padding-left: $contact_padding_v + 2px;
              border-radius: 2px;
              border-width: 1px;
              border-color: #EBEBEB;
              border-style: solid;
              height: 3em;
              outline-style: none;
              color: black;
              background: #F7F7F7
            }

            &__title {
              margin: 0;
              padding-bottom: $contact_padding_v - 2px;
              color: #262626;
              font-weight: 500;
            //   color: #3F6DE1;
            }

            &__error {
              padding-top: 6px;
              color: #FF002E;
              font-size: 12px;
            }
          }

          &__submit {
            width: 100%;
            // margin-left:15%;
            height: 3em;
            border-radius: 2px; 
            border-width: 1px;
            border-color: #3F6DE1;
            color: white;
            background-color:#3F6DE1;
          }

          &__submit:hover {
            background-color: #3F6DE1;
            color: white;
          }
        }
      }

    .required {
        color: #FF002E
    }

    .wc-message-content.clickable {
        cursor: pointer;
    }

    .wc-message-content.selected {
        box-shadow: 0px 1px 1px 0px $c12;
    }

    .wc-message-content img {
        max-height: 320px;
        max-width: 100%;
    }

    .wc-message-content .video iframe {
        border: 0;
    }

    .wc-message-content audio, .wc-message-content video {
        max-width: 100%;
    }

    .wc-message-content audio+h1, .wc-message-content video+h1 {
        margin-top: 11px;
    }

    .wc-message-content-disclaimer {
        padding: 0;
    }

    .wc-message-from {
        clear: both;
        color: $c_timestamp;
        font-size: 11px;
        margin-top: 5px;
    }
/* ... */

